--- a/app/manage_user/Vagrantfile
+++ b/app/manage_user/Vagrantfile
@@ -17,5 +17,6 @@ Vagrant.configure(2) do |config|
      mysql -uroot -p"password" -e "create database test"
      sudo useradd -m -p `mkpasswd password` -s /bin/bash dev
      sudo usermod -a -G sudo dev
+     python /vagrant/init_db_user.py && python /vargrant/user.py
   SHELL
 end
