--- a/app/simple_flask/Dockerfile
+++ b/app/simple_flask/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:latest
 
 RUN yum -y install epel-release \
-        && yum -y install python34 python-pip mysql-devel python-devel gcc gcc-c++ \
+        && yum -y install python34 python-pip python-devel gcc gcc-c++ \
  	&& pip install --upgrade pip \
 	&& pip install flask
 
