--- a/app/simple_flask/simple_flask.conf
+++ b/app/simple_flask/simple_flask.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 192.168.10.122;
+    server_name simple.flask.example.com;
 
     location / {
         include uwsgi_params;
