--- a/app/simple_flask/wsgi.ini
+++ b/app/simple_flask/wsgi.ini
@@ -3,11 +3,11 @@ module = wsgi
 master = true
 processes = 5
 
-uid = nginx
-gid = nginx
+#uid = nginx
+#gid = nginx
 #socket = /tmp/myproject.sock
 socket = 0.0.0.0:8000
-chmod-socket = 660
+#chmod-socket = 660
 vacuum = true
 
 die-on-term = true
