--- a/app/simple_flask/simple_flask.conf
+++ b/app/simple_flask/simple_flask.conf
@@ -1,9 +1,13 @@
+upstream simple_flask_app {
+    server simple_flask:9000;
+}
+
 server {
     listen 80;
     server_name simple.flask.example.com;
 
     location / {
         include uwsgi_params;
-        uwsgi_pass uwsgi://simple_flask:9000;
+        uwsgi_pass simple_flask_app;
     }
 }
