--- a/app/simple_flask/docker-compose.yml
+++ b/app/simple_flask/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   web:
     image: nginx
-    container_name: nginx
+    hostname: nginx
     ports:
      - "80:80"
     volumes:
@@ -13,7 +13,7 @@ services:
      - my-net
   app:
     image: xavivn/simple_flask
-    container_name: simple_flask
+    hostname: simple_flask
     networks:
     - my-net
 networks:
