--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -104,7 +104,7 @@
 
 # if set, always use this private key file for authentication, same as
 # if passing --private-key to ansible or ansible-playbook
-#private_key_file = /path/to/file
+private_key_file = /etc/.ssh/test_id_rsa
 
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
