--- a/ansible/roles/mariadb-galera-cluster/tasks/main.yml
+++ b/ansible/roles/mariadb-galera-cluster/tasks/main.yml
@@ -5,4 +5,22 @@
   copy: src=RPM-GPG-KEY-MariaDB dest=/etc/pki/rpm-gpg
 
 - name: Add percona repo
-	yum: name="{{ percona_url }}" state=present
+  yum: name="{{ percona_url }}" state=present
+
+- name: Clean yum
+  command: yum clean all
+
+- name: Install MariaDB lastest package
+  yum: name={{ item }} state=latest update_cache=yes
+  with_items:
+  - MariaDB-client
+  - MariaDB-server
+  - galera
+  - MariaDB-devel
+  - python-setuptools
+  - percona-xtrabackup
+  - percona-toolkit
+  - socat
+
+- name: Install MySQL-python lib
+	easy_install: name="MySQL-python"
