--- a/ansible/dbservers_mariadb_replication.yml
+++ b/ansible/dbservers_mariadb_replication.yml
@@ -1,3 +1,5 @@
 - hosts: dbservers_mariadb_replication
+  vars_files:
+    - group_vars/dbservers_mariadb_replication
   roles:  
     - role: mariadb-replication
