--- a/ansible/user.yaml
+++ b/ansible/user.yaml
@@ -1,4 +1,5 @@
-- hosts: all
+- name: Setup deployer user
+  hosts: all
   vars:
     sudoers:
       - deployer
@@ -25,5 +26,5 @@
     - name: Copy ssh key to authorized_keys
       authorized_key:
         user: deployer
-        key: "{{ lookup('file', '/etc/ansible/.ssh/id_rsa.pub') }}"
+        key: "{{ lookup('file', '/etc/.ssh/ansible_id_rsa.pub') }}"
 
