--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -12,6 +12,7 @@
 # some basic default values...
 
 #inventory      = /etc/ansible/hosts
+inventory      = /etc/ansible/inventories/staging/hosts.yaml
 #library        = /usr/share/my_modules/
 #remote_tmp     = $HOME/.ansible/tmp
 #local_tmp      = $HOME/.ansible/tmp
@@ -120,6 +121,7 @@ private_key_file = /etc/.ssh/ansible_id_rsa
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
 #vault_password_file = /path/to/vault_password_file
+vault_password_file = /etc/.vault_pass.txt
 
 # format of string {{ ansible_managed }} available within Jinja2
 # templates indicates to users editing templates files will be replaced.
