--- a/ansible/roles/common/tasks/main.yaml
+++ b/ansible/roles/common/tasks/main.yaml
@@ -28,34 +28,34 @@
     block: |
       {{ nameservers }}
 
-- name: Install epel-release
-  yum: name="epel-release" update_cache=true  
+#- name: Install epel-release
+#  yum: name="epel-release" update_cache=true  
 
 #- name: Debug
 #  debug: msg="URL= {{ item.url }}"
 #  with_items: "{{ repos }}"
 
-- name: Install elrepo
-  yum:
-    name: "{{ item.url.0 }}"
-    update_cache: true
-  when:
-    - ansible_distribution == "{{ item.distribution }}"
-    - ansible_distribution_major_version == "{{ item.distribution_major_version }}"
-  with_items: "{{ repos }}"
+#- name: Install elrepo
+#  yum:
+#    name: "{{ item.url.0 }}"
+#    update_cache: true
+#  when:
+#    - ansible_distribution == "{{ item.distribution }}"
+#    - ansible_distribution_major_version == "{{ item.distribution_major_version }}"
+#  with_items: "{{ repos }}"
 
-- name: Install remi repo
-  yum:
-    name: "{{ item.url.1 }}"
-    update_cache: true
-  when:
-    - ansible_distribution == "{{ item.distribution }}"
-    - ansible_distribution_major_version == "{{ item.distribution_major_version }}"
-  with_items: "{{ repos }}"
+#- name: Install remi repo
+#  yum:
+#    name: "{{ item.url.1 }}"
+#    update_cache: true
+#  when:
+#    - ansible_distribution == "{{ item.distribution }}"
+#    - ansible_distribution_major_version == "{{ item.distribution_major_version }}"
+#  with_items: "{{ repos }}"
 
-- name: Install monitoring and debuging package
-  yum: name="{{ item }}" update_cache=yes
-  with_items: "{{ packages }}"
+#- name: Install monitoring and debuging package
+#  yum: name="{{ item }}" update_cache=yes
+#  with_items: "{{ packages }}"
 
 - name: Disable selinux
   selinux: state=disabled
@@ -96,6 +96,9 @@
     ssh_key_bits: 2048
     ssh_key_file: .ssh/id_rsa
   with_items: "{{ accounts }}"
+
+- name: set vm.swappiness in sysctl.conf
+  sysctl: name=vm.swappiness value="{{ sysctl.vm.swappiness }}" state=present sysctl_set=yes reload=yes ignoreerrors=yes
 
 - name: Remove temporary gateway
   command: route del default gw "{{ gateway.ip }}"
