--- a/ansible/roles/common/vars/main.yaml
+++ b/ansible/roles/common/vars/main.yaml
@@ -1,7 +1,7 @@
 accounts:  
- - name: dungnm
-   password: "{{ vault_dungnm_passwd }}"
-   full_name: Nguyen Manh Dung
+ - name: "{{ vault_dungnm_user }}"
+   passwd: "{{ vault_dungnm_passwd }}"
+   full_name: "{{ vault_dungnm_full_name }}"
 
 nameservers: |
    nameserver 8.8.8.8
@@ -17,12 +17,21 @@ repos:
        - http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
    - distribution: CentOS
      distribution_major_version: 6
+     url:
+       - http://www.elrepo.org/elrepo-release-6-6.el6.elrepo.noarch.rpm
+       - http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
+   - distribution: CentOS
+     distribution_major_version: 5
+     url:
+       - http://www.elrepo.org/elrepo-release-5-5.el5.elrepo.noarch.rpm
+       - http://rpms.famillecollet.com/enterprise/remi-release-5.rpm
 
 os:
   distribution_centos:
     name: CentOS
+    version7: 7
     version6: 6
-    version7: 7  
+    version5: 5
      
 packages:
    - gcc
