--- a/ansible/roles/mongodb_single/vars/main.yaml
+++ b/ansible/roles/mongodb_single/vars/main.yaml
@@ -6,15 +6,33 @@ config:
   processManagement:
     pidFilePath: /var/run/mongodb/mongod.pid
   net:
-    port: "{{ mongodb_single_default.config.net.port }}"
+    port: "{{ default_mongodb_port }}"
     bindIp: 0.0.0.0
   security:
     authorization: enabled
   setParameter:
     enableLocalhostAuthBypass: 0
 
+version: "{{ default_mongodb_version }}"
+
 os:
   distribution_centos:
     name: CentOS
-    version6: 6
     version7: 7
+    version6: 6
+    version5: 5
+
+### first, disable security and enable localhost auth bypass then revert these options.
+admin_users:
+  - name: "{{ vault_mongodb_root_user }}"
+    passwd: "{{ default_mongodb_root_passwd }}"
+    roles: "{{ vault_mongodb_root_roles }}"
+    db: "{{ vault_mongodb_root_db }}"
+  - name: "{{ vault_mongodb_admin_user }}"
+    passwd: "{{ default_mongodb_admin_passwd }}"
+    roles: "{{ vault_mongodb_admin_roles }}"
+    db: "{{ vault_mongodb_admin_db }}"
+  - name: "{{ vault_mongodb_dumper_user }}"
+    passwd: "{{ default_mongodb_dumper_passwd }}"
+    roles: "{{ vault_mongodb_dumper_roles }}"
+    db: "{{ vault_mongodb_dumper_db }}"
