--- a/samples/haproxy/haproxy.sample.cfg
+++ b/samples/haproxy/haproxy.sample.cfg
@@ -25,6 +25,25 @@ defaults
     timeout check           10s
     maxconn                 3000
 
+userlist UsersAuth
+    user admin insecure-password passwd
+
+listen sample_service
+    bind *:3000
+    mode http
+    option forwardfor
+    balance roundrobin
+    cookie SERVERID prefix
+
+    acl whiteIPlist src 192.168.10.121
+    tcp-request connection reject if !whiteIPlist
+
+    acl whiteUserList http_auth(UsersAuth)
+    http-request auth realm  if !whiteUserList
+
+    server minion0 192.168.10.122:82 check
+    server minion1 192.168.10.123:82 check
+
 frontend http-in
     mode http
     bind *:80
@@ -41,6 +60,7 @@ frontend https-in
 backend backend_host.sample.com_service
     mode http
     option forwardfor
+    balance roundrobin
     cookie SERVERID prefix
     server minion0 192.168.10.122:92 check
     server minion1 192.168.10.123:92 check
@@ -48,8 +68,8 @@ backend backend_host.sample.com_service
 listen stats
     mode http
     bind *:9000
-    acl whitelist src 192.168.10.121
-    tcp-request connection reject if !whitelist
+    acl whiteIPlist src 192.168.10.121
+    tcp-request connection reject if !whiteIPlist
     option httplog
     option httpclose
     stats enable
