--- a/ansible/inventories/staging/hosts.yaml
+++ b/ansible/inventories/staging/hosts.yaml
@@ -1,3 +1,3 @@
 [test]
-test2 ansible_host=192.168.10.122 hostname=test2 ansible_ssh_user=root ansible_ssh_pass=idontneedtoknow
-test3 ansible_host=192.168.10.123 hostname=test3 ansible_ssh_user=root ansible_ssh_pass=idontneedtoknow
+test2 ansible_host=192.168.10.122 hostname=test2
+test3 ansible_host=192.168.10.123 hostname=test3
