--- a/ansible/roles/mongodb_single/tasks/main.yaml
+++ b/ansible/roles/mongodb_single/tasks/main.yaml
@@ -10,8 +10,8 @@
   copy: src=MongoDB3.repo.j2 dest=/etc/yum.repos.d/MongoDB.repo
   when: version == 3
 
-- name: Install MongoDB
-  yum: name=mongodb-org update_cache=yes 
+#- name: Install MongoDB
+#  yum: name=mongodb-org update_cache=yes 
 
 - name: Get pip
   get_url: url=https://bootstrap.pypa.io/get-pip.py dest=/tmp/get-pip.py mode=0644
@@ -27,6 +27,9 @@
 - name: Config MongoDB
   template: src=mongod.conf.j2 dest=/etc/mongod.conf backup=yes
   tags: reconfig
+
+- name: set vm.swappiness in sysctl.conf
+  sysctl: name=vm.swappiness value="{{ sysctl.vm.swappiness }}" state=present sysctl_set=yes reload=yes ignoreerrors=yes
 
 - name: Change ulimit
   copy: src=mongod_ulimit.j2 dest=/etc/security/limits.d/90-mongodb.conf  
@@ -84,6 +87,25 @@
     - ansible_distribution_major_version == "{{ os.distribution_centos.version7 }}"
   tags: restart_mongod
 
+- name: Disable authorization temporarily
+  lineinfile: 
+    dest: /etc/mongod.conf
+    regexp: '\s\sauthorization: enabled'
+    line: '  authorization: disabled'
+    state: present
+  tags: disable_auth
+
+- name: Enable locahost exception
+  lineinfile: 
+    dest: /etc/mongod.conf
+    regexp: '\s\senableLocalhostAuthBypass: 0'
+    line: '  enableLocalhostAuthBypass: 1'
+    state: present 
+  tags: enable_local_exception
+
+- name: Restart mongod to apply new config
+  service: name=mongod state=restarted
+
 - name: Create admin users
   mongodb_user:
     database: "{{ item.db }}"
@@ -94,3 +116,28 @@
     login_port: "{{ config.net.port }}"
   with_items: "{{ admin_users }}"
   ignore_errors: yes
+
+- name: Re-enable authorization forever
+  lineinfile: 
+    dest: /etc/mongod.conf
+    regexp: '\s\sauthorization: disabled'
+    line: '  authorization: enabled'
+    state: present 
+  tags: enable_auth
+
+- name: Re-disable localhost exception
+  lineinfile:
+    dest: /etc/mongod.conf
+    regexp: '\s\senableLocalhostAuthBypass: 1'
+    line: '  enableLocalhostAuthBypass: 0'
+    state: present
+  tags: disable_local_exception
+
+- name: Restart mongod to apply new config
+  service: name=mongod state=restarted
+
+- name: Check mongod status
+  command: service mongod status
+  tags: check_service
+
+
